--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <!-- Add your site or application content here -->
-    <p>Hello world! This is my first project.</p>
+    <p>Hello world! Ova e prva promena na aplikacija.</p>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
