--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
 
   <body>
     <!-- Add your site or application content here -->
-    <p>Hello world! Ova e prva promena na aplikacija.</p>
+    <header>Sopstveno portfolio - Zoran Ristovski</header>
+    <p>
+      Magister sum po proekten menadgment. Momentalno rabotam vo Finansisko
+      drushtvo. Imam osnoven stepen - HTML, CSS i C++
+    </p>
+    <img src="C:\Users\Gordana\Pictures\maski.jpg" />
+
+    <footer>Toa e toa za prvata proba</footer>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
