--- a/index.html
+++ b/index.html
@@ -24,12 +24,21 @@
   <body>
     <!-- Add your site or application content here -->
     <header>Sopstveno portfolio - Zoran Ristovski</header>
-    <p>
-      Magister sum po proekten menadgment. Momentalno rabotam vo Finansisko
-      drushtvo. Imam osnoven stepen - HTML, CSS i C++
-    </p>
+    <ul>
+      <li>
+        <p>
+          Magister sum po proekten menadgment. Momentalno rabotam vo Finansisko
+          drushtvo. Imam osnoven stepen - HTML, CSS i C++
+        </p>
+      </li>
+    </ul>
+    <ol>
+      <li><p>Imam i osnoven stepen za rabota vo Photoshop</p></li>
+    </ol>
     <img src="C:\Users\Gordana\Pictures\maski.jpg" />
-
+    <a href="https://twitter.com/zoranrist"
+      ><p>Ova e link do mojot profil</p></a
+    >
     <footer>Toa e toa za prvata proba</footer>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
