--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
       </li>
     </ul>
     <ol>
-      <li><p>Imam i osnoven stepen za rabota vo Photoshop</p></li>
+      <li><p>Imam i osnoven stepen vo Photoshop</p></li>
     </ol>
     <img src="C:\Users\Gordana\Pictures\maski.jpg" />
     <a href="https://twitter.com/zoranrist"
       ><p>Ova e link do mojot profil</p></a
     >
+    <img src="https://happycoding.io/examples/html/images/rainbow-logo-3.png" />
     <footer>Toa e toa za prvata proba</footer>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
