go smeniv edge so chrome

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <ol>
       <li><p>Imam i osnoven stepen vo Photoshop</p></li>
     </ol>
-    <img src="C:\Users\Gordana\Pictures\maski.jpg" />
+    <img
+    src="https://images.pexels.com/photos/1426718/pexels-photo-1426718.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+    />
     <a href="https://twitter.com/zoranrist"
       ><p>Ova e link do mojot profil</p></a
     >
