prva_vezba_doma_tabeli

--- a/index.html
+++ b/index.html
@@ -23,26 +23,29 @@
 
   <body>
     <!-- Add your site or application content here -->
-    <header>Sopstveno portfolio - Zoran Ristovski</header>
-    <ul>
-      <li>
-        <p>
-          Magister sum po proekten menadgment. Momentalno rabotam vo Finansisko
-          drushtvo. Imam osnoven stepen - HTML, CSS i C++
-        </p>
-      </li>
-    </ul>
-    <ol>
-      <li><p>Imam i osnoven stepen vo Photoshop</p></li>
-    </ol>
-    <img
-    src="https://images.pexels.com/photos/1426718/pexels-photo-1426718.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
-    />
-    <a href="https://twitter.com/zoranrist"
-      ><p>Ova e link do mojot profil</p></a
-    >
-    <img src="https://happycoding.io/examples/html/images/rainbow-logo-3.png" />
-    <footer>Toa e toa za prvata proba</footer>
+    <html>
+      <table border="1">
+        <tr>
+          <th>Year</th>
+          <th>History</th>
+        </tr>
+        <tr>
+          <td>2005</td>
+          <td>W3C cafe opens first store in Boston</td>
+        </tr>
+        <tr>
+          <td>
+            2007
+          </td>
+          <td>W3C cafe opens first stores outside of USA</td>
+        </tr>
+        <tr>
+          <td>2010</td>
+          <td>W3C cafe opens online atores</td>
+        </tr>
+      </table>
+    </html>
+    <p>Hello world! This is HTML5 Boilerplate.</p>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
