sega_dodadov_mnogu_tagovi_tralala

--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
     <a href="https://twitter.com/zoranrist"
       ><p>tuka klikni i kje vlezesh vo mojot profil</p></a
     >
+    <img src="./img/austin-new-years.png" />
+    <div>
+      <h2>
+        My social networks
+      </h2>
+      <ul>
+        <li>Facebook</li>
+        <li>
+          Instagram
+          <a href="https://www.instagram.com/zox0rist/?hl=en">Click here!</a>
+        </li>
+      </ul>
+    </div>
     <p>Hello world! This is HTML5 Boilerplate.</p>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
