malce css niz kluchalka

--- a/index.html
+++ b/index.html
@@ -23,64 +23,80 @@
 
   <body>
     <!-- Add your site or application content here -->
-
-    <table border="1">
-      <tr>
-        <th>Year</th>
-        <th>History</th>
-      </tr>
-      <tr>
-        <td>
-          2005
-        </td>
-        <td>W3C cafe opens first store in Boston</td>
-      </tr>
-      <tr>
-        <td>
-          2007
-        </td>
-        <td>W3C cafe opens first stores outside of USA</td>
-      </tr>
-      <tr>
-        <td>2010</td>
-        <td>W3C cafe opens online atores</td>
-      </tr>
-    </table>
-    <div>Prva sekcija</div>
-    <div>Vtora sekcija</div>
-    <ul>
-      <li>prv</li>
-    </ul>
-    <ul>
-      <li>vtor</li>
-    </ul>
-    <ol>
-      <li>tret</li>
-    </ol>
-    <ol>
-      <li>chetvrt</li>
-    </ol>
-
-    <h1>Zoran Ristovski</h1>
-    <h2>Jas sum pomal</h2>
-    <h3>i pomal i pomal</h3>
-
-    <a href="https://twitter.com/zoranrist"
-      ><p>tuka klikni i kje vlezesh vo mojot profil</p></a
-    >
-    <img src="./img/austin-new-years.png" />
-    <div>
-      <h2>
-        My social networks
-      </h2>
+    <header style="text-align: center;">
+      <table border="1">
+        <tr>
+          <th>Year</th>
+          <th>History</th>
+        </tr>
+        <tr>
+          <td>
+            2005
+          </td>
+          <td>W3C cafe opens first store in Boston</td>
+        </tr>
+        <tr>
+          <td>
+            2007
+          </td>
+          <td>W3C cafe opens first stores outside of USA</td>
+        </tr>
+        <tr>
+          <td>2010</td>
+          <td>W3C cafe opens online atores</td>
+        </tr>
+      </table>
+      <div>Prva sekcija</div>
+      <div>Vtora sekcija</div>
       <ul>
-        <li>Facebook</li>
-        <li>
-          Instagram
-          <a href="https://www.instagram.com/zox0rist/?hl=en">Click here!</a>
-        </li>
+        <li>prv</li>
       </ul>
-    </div>
+      <ul>
+        <li>vtor</li>
+      </ul>
+      <ol>
+        <li>tret</li>
+      </ol>
+      <ol>
+        <li>chetvrt</li>
+      </ol>
+
+      <h1>Zoran Ristovski</h1>
+      <h2>Jas sum pomal</h2>
+      <h3>i pomal i pomal</h3>
+    </header>
+    <main style="text-align: center;">
+      <a href="https://twitter.com/zoranrist" title="Mojot twitter"
+        ><p>tuka klikni i kje vlezesh vo mojot profil</p></a
+      >
+      <img
+        src="./img/austin-new-years.png"
+        alt="Avatar"
+        title="Eve ja mojata slika"
+        width="50%"
+        height="50%"
+      />
+    </main>
+    <footer style="text-align: center;">
+      <div>
+        <h2>
+          My social networks
+        </h2>
+        <ul>
+          <li>Facebook</li>
+          <li>
+            Instagram
+            <a
+              href="https://www.instagram.com/zox0rist/?hl=en"
+              title="mojot Instagram"
+              >Click here!</a
+            >
+          </li>
+        </ul>
+      </div>
+      <span>Zoran Ristovski 2020</span>
+    </footer>
+
     <p>Hello world! This is HTML5 Boilerplate.</p>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
