--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         height="50%"
       />
     </main>
+    <a href="/second.html">Go to second page</a>
     <footer style="text-align: center;">
       <div>
         <h2>
