--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <!-- Add your site or application content here -->
-    <header style="text-align: center;">
+    <header style="text-align: center; font-size: 24px; color: red;">
       <table border="1">
         <tr>
           <th>Year</th>
@@ -62,6 +62,7 @@
       </ol>
 
       <h1>Zoran Ristovski</h1>
+      <p>web developer</p>
       <h2>Jas sum pomal</h2>
       <h3>i pomal i pomal</h3>
     </header>
