--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
 
   <body>
     <!-- Add your site or application content here -->
-    <header style="text-align: center; font-size: 24px; color: red;">
+    <header
+      style="
+        text-align: center;
+        font-size: 24px;
+        color: red;
+        font-weight: bold;
+        font-style: italic;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        text-align: center;
+      "
+    >
       <table border="1">
         <tr>
           <th>Year</th>
