--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@
     <link rel="stylesheet" href="css/main.css" />
 
     <meta name="theme-color" content="#fafafa" />
-  </head>
-
-  <body>
-    <!-- Add your site or application content here -->
-    <header
-      style="
+    <style>
+      header {
         text-align: center;
         font-size: 24px;
         color: red;
         font-weight: bold;
         font-style: italic;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
         text-align: center;
-      "
-    >
+      }
+    </style>
+  </head>
+
+  <body>
+    <!-- Add your site or application content here -->
+    <header>
       <table border="1">
         <tr>
           <th>Year</th>
