--- a/index.html
+++ b/index.html
@@ -17,19 +17,9 @@
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/first.css" />
 
     <meta name="theme-color" content="#fafafa" />
-    <style>
-      header {
-        text-align: center;
-        font-size: 24px;
-        color: red;
-        font-weight: bold;
-        font-style: italic;
-        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-        text-align: center;
-      }
-    </style>
   </head>
 
   <body>
