komentari_vo_css

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <li>chetvrt</li>
       </ol>
 
-      <h1>Zoran Ristovski</h1>
+      <h1 id="firstID" class="first">Zoran Ristovski</h1>
       <p>web developer</p>
       <h2>Jas sum pomal</h2>
       <h3>i pomal i pomal</h3>
