--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
         <li>chetvrt</li>
       </ol>
 
-      <h1 id="firstID" class="first">Zoran Ristovski</h1>
+      <h1 class="first second" id="firstID">Zoran Ristovski</h1>
       <p>web developer</p>
       <h2>Jas sum pomal</h2>
+      <!-- Eve i za html eden komentar e takva e sintaksata na komentiranje -->
       <h3>i pomal i pomal</h3>
     </header>
     <main style="text-align: center;">
