selektori_i_psevdo_selektori

--- a/index.html
+++ b/index.html
@@ -62,13 +62,23 @@
         <li>chetvrt</li>
       </ol>
 
-      <h1 class="first second" id="firstID">Zoran Ristovski</h1>
+      <h1
+        class="first second inside double-inside"
+        id="firstID"
+        style="color: magenta;"
+      >
+        Zoran Ristovski
+        <span class="inside"
+          >2020<strong class="double-inside">July</strong></span
+        >
+      </h1>
+
       <p>web developer</p>
       <h2>Jas sum pomal</h2>
       <!-- Eve i za html eden komentar e takva e sintaksata na komentiranje -->
       <h3>i pomal i pomal</h3>
     </header>
-    <main style="text-align: center;">
+    <main id="main" style="text-align: center;">
       <a href="https://twitter.com/zoranrist" title="Mojot twitter"
         ><p>tuka klikni i kje vlezesh vo mojot profil</p></a
       >
