--- a/second.html
+++ b/second.html
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/first.css" />
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -30,7 +31,7 @@
     <main>
       <form id="first-form">
         <label for="name">firstname</label>
-        <input type="text" id="name" name="firstname" />
+        <input type="text" id="name" name="firstname" required />
         <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
         <label for="vehicle1"> Zoki</label><br />
         <input type="checkbox" id="vehicle2" name="vehicle2" value="Car" />
