--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
       <h2>Jas sum pomal</h2>
       <!-- Eve i za html eden komentar e takva e sintaksata na komentiranje -->
       <h3>i pomal i pomal</h3>
+      <div style="width: 100px; display: inline-block;">
+        Some block element
+      </div>
+      <span style="padding: 30px;">Some inline element</span>
     </header>
     <main id="main" style="text-align: center;">
       <a href="https://twitter.com/zoranrist" title="Mojot twitter"
