--- a/index.html
+++ b/index.html
@@ -72,15 +72,17 @@
           >2020<strong class="double-inside">July</strong></span
         >
       </h1>
-
       <p>web developer</p>
       <h2>Jas sum pomal</h2>
       <!-- Eve i za html eden komentar e takva e sintaksata na komentiranje -->
       <h3>i pomal i pomal</h3>
-      <div style="width: 100px; display: inline-block;">
+      <div style="width: 100px; display: inline-block; padding: 100px;">
         Some block element
       </div>
       <span style="padding: 30px;">Some inline element</span>
+      <span>Second inline element</span>
+      <span style="display: block;">Second inline element</span>
+      <!-- 1:09 na 19.08.2020 inline - block -->
     </header>
     <main id="main" style="text-align: center;">
       <a href="https://twitter.com/zoranrist" title="Mojot twitter"
