--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       <span>Second inline element</span>
       <span style="display: block;">Second inline element</span>
       <!-- 1:09 na 19.08.2020 inline - block -->
+      <!-- 1:19 na 19.08.2020 static (default), relative, absolute, fixed, sticky -->
     </header>
     <main id="main" style="text-align: center;">
       <a href="https://twitter.com/zoranrist" title="Mojot twitter"
