--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
           >2020<strong class="double-inside">July</strong></span
         >
       </h1>
-      <p>web developer</p>
+      <div class="container">
+        <div class="row">
+          <p class="col=6">web developer</p>
+          <p class="col=6">web developer 2</p>
+          <p>web developer</p>
+        </div>
+      </div>
       <h2>Jas sum pomal</h2>
       <!-- Eve i za html eden komentar e takva e sintaksata na komentiranje -->
       <h3>i pomal i pomal</h3>
