--- a/index.html
+++ b/index.html
@@ -36,15 +36,11 @@
           <th>History</th>
         </tr>
         <tr>
-          <td>
-            2005
-          </td>
+          <td>2005</td>
           <td>W3C cafe opens first store in Boston</td>
         </tr>
         <tr>
-          <td>
-            2007
-          </td>
+          <td>2007</td>
           <td>W3C cafe opens first stores outside of USA</td>
         </tr>
         <tr>
@@ -66,17 +62,17 @@
       <ol>
         <li>chetvrt</li>
       </ol>
-
-      <h1
+      <h1></h1>
+      <!-- <h1
         class="first second inside double-inside"
         id="firstID"
-        style="color: magenta;"
+        style="color: magenta"
       >
         Zoran Ristovski
         <span class="inside"
           >2020<strong class="double-inside">July</strong></span
         >
-      </h1>
+      </h1> -->
       <div class="container">
         <div class="row">
           <p class="col=6">web developer</p>
@@ -87,16 +83,16 @@
       <h2>Jas sum pomal</h2>
       <!-- Eve i za html eden komentar e takva e sintaksata na komentiranje -->
       <h3>i pomal i pomal</h3>
-      <div style="width: 100px; display: inline-block; padding: 100px;">
+      <div style="width: 100px; display: inline-block; padding: 100px">
         Some block element
       </div>
-      <span style="padding: 30px;">Some inline element</span>
+      <span style="padding: 30px">Some inline element</span>
       <span>Second inline element</span>
-      <span style="display: block;">Second inline element</span>
+      <span style="display: block">Second inline element</span>
       <!-- 1:09 na 19.08.2020 inline - block -->
       <!-- 1:19 na 19.08.2020 static (default), relative, absolute, fixed, sticky -->
     </header>
-    <main id="main" style="text-align: center;">
+    <main id="main" style="text-align: center">
       <a href="https://twitter.com/zoranrist" title="Mojot twitter"
         ><p>tuka klikni i kje vlezesh vo mojot profil</p></a
       >
@@ -109,11 +105,9 @@
       />
     </main>
     <a href="/second.html">Go to second page</a>
-    <footer style="text-align: center;">
+    <footer style="text-align: center">
       <div>
-        <h2>
-          My social networks
-        </h2>
+        <h2>My social networks</h2>
         <ul>
           <li>Facebook</li>
           <li>
@@ -133,6 +127,7 @@
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="./js/hello.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
