--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script src="./js/hello.js"></script>
+    <script src="./js/references.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
