--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
     <script src="./js/hello.js"></script>
     <script src="./js/references.js"></script>
     <script src="./js/conditionals.js"></script>
+    <script src="./js/loops.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
