--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <script src="./js/references.js"></script>
     <script src="./js/conditionals.js"></script>
     <script src="./js/loops.js"></script>
+    <script src="./js/functions.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
